SF Primes/src/objects/Request_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Request_ID__c</fullName>
        <formula>Request__r.Request_ID__c</formula>
        <label>Request ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Link__c</fullName>
        <formula>hyperlink(&quot;https://&quot;&amp;$Setup.CustomSettings__c.SF_Instance_Link__c &amp; Request__c, &quot;Request Link&quot;,&quot;_blank&quot;)</formula>
        <label>Request Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Request Team Members</relationshipLabel>
        <relationshipName>Request_Team_Members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Tester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF Config Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Reviewer</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request Team Member</label>
    <nameField>
        <displayFormat>RTM-{0000}</displayFormat>
        <label>Request Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>